--- a/titanic_cont.ipynb
+++ b/titanic_cont.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('E:/TRAIN.csv')"
+    "df=pd.read_csv('data/train.csv')"
    ]
   },
   {
